src/err.txt
windows build for platform vexv5
"CXX src/main.cpp"
src/main.cpp:283:46: error: function definition is not allowed here
    bool coloreAffidabile(double brightness) {
                                             ^
src/main.cpp:301:56: error: function definition is not allowed here
    char riconosciColoreHV(int hue, double brightness) {
                                                       ^
src/main.cpp:354:27: error: use of undeclared identifier 'riconosciColoreHV'
            char colore = riconosciColoreHV(hue, brightness);
                          ^
3 errors generated.

make: *** [vex/mkrules.mk:13: build/src/main.o] Error 1

Make process closed with exit code: 2
